methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:46: error: ';' expected but ')' found.
      recule());
              ^