methods.picture.PatternPicture.scala.code
override def run() {
  
  def moveBrosse() {
    baisseBrosse();
    leveBrosse();
  }
  
  def motif1(c : Color) {
    
    var n = 0;
    
    setCouleurBrosse(c);
    
    for (n <- 1 to 2) {
      avance();
      moveBrosse();
      gauche();
      avance();
      gauche();

  	}
    
  }
  
  def motif2(c : Color) {
    
    var n = 0;
    
    for (n <- 1 to 2) {
      avance();
    }
    
    setCouleurBrosse(c);
    
    moveBrosse();
    avance();
    gauche();
    avance();
    moveBrosse();
    gauche();
    avance();
    gauche();
    avance();
    gauche();
    for (n <- 1 to 2) {
      recule());
    }

    
  }
motif2(Color.BLUE)
}